css fine tuning, remove info text when searching to avoid overlapping on mobile devices, remove dead code

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 	#info {
 		position: absolute; 
 		left: 10px; 
-		top: 125px;
+		top: 127px;
 		z-index: 1;
   		border-bottom: none;
 		background: white;
